--- a/organizeit/src/main/resources/application.properties
+++ b/organizeit/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.h2.console.settings.web-allow-others=true
