--- a/organizeit/src/main/resources/application.properties
+++ b/organizeit/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#server.port=8443
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=0JEmq4C1P4Q7pXEaJxOM
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=organizeit-keystore
